--- a/index.html
+++ b/index.html
@@ -1,63 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://kit.fontawesome.com/eb195998a5.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="css/styles.css">
   <script src="js/jquery-3.6.0.js"></script>
   <script src="js/scripts.js"></script>
-  <title>Document</title>
+  <title>L-Prime's calculator</title>
 </head>
+
 <body>
   <div class="container">
-    <h1>Calculator</h1>
-    <form id="calculator">
-      <div class="form-group">
-        <label for="input1">1st number:</label>
-        <input id="input1" class="form-control" type="text">
-      </div>
-      <div class="form-group">
-        <label for="input2">2nd number:</label>
-        <input id="input2" class="form-control" type="text">
-      </div>
-      <div class="radio">
-        <label>
-          <input type="radio" name="operator" value="add" checked>
-          +Addition
-        </label>
-      </div>
-      <div class="radio">
-        <label>
-          <input type="radio" name="operator" value="subtract">
-          -Subtract
-        </label>
-      </div>
-      <div class="radio">
-        <label>
-          <input type="radio" name="operator" value="multiply">
-          *Multiply
-        </label>
-      </div>        
-      <div class="radio">
-        <label>
-          <input type="radio" name="operator" value="divide">
-          /Divide
-        </label>
-      </div>
-      <div class="radio">
-        <label>
-          <input type="radio" name="operator" value="modulo">
-          %Modulo
-        </label>
-      </div>        
-      <button type="submit" class="btn">Go!</button>
-      
-    </form>
-    <div id="output">
+    <div class="logic">
+      <i class="fas fa-bars" id="bar"></i>
+      <h1>L'primes CALCULATOR.</h1>
+      <form id="calculator">
+        <div class="form-group">
+          <label for="input1">1st number:</label>
+          <input id="input1" class="form-control" type="text">
+        </div>
+        <div class="form-group">
+          <label for="input2">2nd number:</label>
+          <input id="input2" class="form-control" type="text">
+        </div>
+        <div class="radio">
+          <label>
+            <input type="radio" name="operator" value="add" checked>
+            +Addition
+          </label>
+        </div>
+        <div class="radio">
+          <label>
+            <input type="radio" name="operator" value="subtract">
+            -Subtract
+          </label>
+        </div>
+        <div class="radio">
+          <label>
+            <input type="radio" name="operator" value="multiply">
+            *Multiply
+          </label>
+        </div>
+        <div class="radio">
+          <label>
+            <input type="radio" name="operator" value="divide">
+            /Divide
+          </label>
+        </div>
+        <div class="radio">
+          <label>
+            <input type="radio" name="operator" value="modulo">
+            %Modulo
+          </label>
+        </div>
+        <button type="submit" class="btn">Go!</button>
 
+      </form>
+      <div id="output">
+        <p>Ans = </p>
+      </div>
     </div>
   </div>
 </body>
+
 </html>
