added all present styles in styles.css

--- a/index.html
+++ b/index.html
@@ -30,37 +30,37 @@
         <div class="radio">
           <label>
             <input type="radio" name="operator" value="add" checked>
-            +Addition
+            +
           </label>
         </div>
         <div class="radio">
           <label>
             <input type="radio" name="operator" value="subtract">
-            -Subtract
+            -
           </label>
         </div>
         <div class="radio">
           <label>
             <input type="radio" name="operator" value="multiply">
-            *Multiply
+            *
           </label>
         </div>
         <div class="radio">
           <label>
             <input type="radio" name="operator" value="divide">
-            /Divide
+            /
           </label>
         </div>
         <div class="radio">
           <label>
             <input type="radio" name="operator" value="modulo">
-            %Modulo
+            %
           </label>
         </div>
         <button type="submit" class="btn">Go!</button>
 
       </form>
-      <div id="output">
+      <div class="ans" id="output">
         <p>Ans = </p>
       </div>
     </div>
