--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
       <h1>L'primes CALCULATOR.</h1>
       <form id="calculator">
         <div class="form-group">
-          <label for="input1">1st number:</label>
+          <label for="input1">Input 1:</label>
           <input id="input1" class="form-control" type="text">
         </div>
         <div class="form-group">
-          <label for="input2">2nd number:</label>
+          <label for="input2">Input 2:</label>
           <input id="input2" class="form-control" type="text">
         </div>
         <div class="radio">
@@ -66,5 +66,4 @@
     </div>
   </div>
 </body>
-
 </html>
