added last line of paragraph with class 'copyright' to index .html

--- a/index.html
+++ b/index.html
@@ -65,5 +65,6 @@
       </div>
     </div>
   </div>
+  <p class="copyright">All rights reserved copyright &copy; @ logic prime enterprise.</p>
 </body>
 </html>
